# Kestrel

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/: DetectSIMD.cmake  FetchDeps.cmake
docs/: WEEK1_PLAN.md  WEEK2_PLAN.md
include/kestrel/loader/: gguf_parser.h  gguf_parser_my.h  gguf_types.h  gguf_types_my.h
knowledge/: GOD.md
scripts/: inspect_gguf.py
src/loader/: gguf_parser.cpp
tools/: AI推荐.md
tools/gguf_dump/: CMakeLists.txt
